unpackaged/main/default/objects/JSR__c/fields/Issues_Prevented_Completion2__c.field-meta.xml
<CustomField>
    <fullName>Issues_Prevented_Completion2__c</fullName>
    <label>Issues Prevented Completion</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>