unpackaged/main/default/objects/JSR__c/fields/Issues_Prevented_Completion__c.field-meta.xml
<CustomField>
    <fullName>Issues_Prevented_Completion__c</fullName>
    <label>Issues Prevented Completion</label>
    <type>TextArea</type>
</CustomField>