unpackaged/main/default/objects/JSR__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add/Move/Change</fullName>
            </value>
            <value>
                <fullName>Trouble Ticket Break Fix</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Infinera AMC</fullName>
            </value>
            <value>
                <fullName>Escort</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>PMR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>