unpackaged/main/default/objects/JSR__c/fields/JSR_Closing_Remarks2__c.field-meta.xml
<CustomField>
    <fullName>JSR_Closing_Remarks2__c</fullName>
    <label>JSR Closing Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>