unpackaged/main/default/objects/JSR__c/fields/JSR_Closing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>JSR_Closing_Remarks__c</fullName>
    <label>JSR Closing Remarks</label>
    <type>TextArea</type>
</CustomField>