unpackaged/main/default/objects/JSR__c/fields/List_KDS_No_HDMI_Port2__c.field-meta.xml
<CustomField>
    <fullName>List_KDS_No_HDMI_Port2__c</fullName>
    <label>List KDS No HDMI Port</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>