unpackaged/main/default/objects/JSR__c/fields/List_KDS_No_HDMI_Port__c.field-meta.xml
<CustomField>
    <fullName>List_KDS_No_HDMI_Port__c</fullName>
    <label>List KDS No HDMI Port</label>
    <type>TextArea</type>
</CustomField>