unpackaged/main/default/objects/JSR__c/fields/ListDiscrepancyMissingInfo2__c.field-meta.xml
<CustomField>
    <fullName>ListDiscrepancyMissingInfo2__c</fullName>
    <label>List Discrepancies And Missing Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>