unpackaged/main/default/objects/JSR__c/fields/ListDiscrepancyMissingInfo__c.field-meta.xml
<CustomField>
    <fullName>ListDiscrepancyMissingInfo__c</fullName>
    <label>List Discrepancies And Missing Info</label>
    <type>TextArea</type>
</CustomField>