unpackaged/main/default/objects/JSR__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Street__c &amp; &quot;, &quot; &amp;
City__c &amp; &quot;, &quot; &amp;
State__c &amp; &quot;, &quot; &amp;
Country__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>