unpackaged/main/default/objects/JSR__c/fields/Location_Has_LUX_Display__c.field-meta.xml
<CustomField>
    <fullName>Location_Has_LUX_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Has LUX Display</label>
    <type>Checkbox</type>
</CustomField>