unpackaged/main/default/objects/JSR__c/fields/Location_On_Shaw_Network__c.field-meta.xml
<CustomField>
    <fullName>Location_On_Shaw_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location On Shaw Network</label>
    <type>Checkbox</type>
</CustomField>