unpackaged/main/default/objects/JSR__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <length>32</length>
    <type>Text</type>
</CustomField>