unpackaged/main/default/objects/JSR__c/fields/ManufactTagsInstalledFiles2__c.field-meta.xml
<CustomField>
    <fullName>ManufactTagsInstalledFiles2__c</fullName>
    <label>Manufacturer Tags Installed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>