unpackaged/main/default/objects/JSR__c/fields/ManufactTagsInstalledFiles__c.field-meta.xml
<CustomField>
    <fullName>ManufactTagsInstalledFiles__c</fullName>
    <label>Manufacturer Tags Installed Files</label>
    <type>TextArea</type>
</CustomField>