unpackaged/main/default/objects/JSR__c/fields/Menu_Boards_Files2__c.field-meta.xml
<CustomField>
    <fullName>Menu_Boards_Files2__c</fullName>
    <label>Menu Boards Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>