unpackaged/main/default/objects/JSR__c/fields/Menu_Boards_Files__c.field-meta.xml
<CustomField>
    <fullName>Menu_Boards_Files__c</fullName>
    <label>Menu Boards Files</label>
    <type>TextArea</type>
</CustomField>