unpackaged/main/default/objects/JSR__c/fields/NoSurveyFormProvidedPhoto__c.field-meta.xml
<CustomField>
    <fullName>NoSurveyFormProvidedPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Survey Form, Provided Photo</label>
    <type>Checkbox</type>
</CustomField>