unpackaged/main/default/objects/JSR__c/fields/OBS_CCN_TCN__c.field-meta.xml
<CustomField>
    <fullName>OBS_CCN_TCN__c</fullName>
    <label>OBS CCN/TCN</label>
    <length>32</length>
    <type>Text</type>
</CustomField>