unpackaged/main/default/objects/JSR__c/fields/offeredOrangeSurvey__c.field-meta.xml
<CustomField>
    <fullName>offeredOrangeSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Contact Offered Orange Survey</label>
    <type>Checkbox</type>
</CustomField>