unpackaged/main/default/objects/JSR__c/fields/OTDR_Shots_Performed__c.field-meta.xml
<CustomField>
    <fullName>OTDR_Shots_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTDR Shots Performed</label>
    <type>Checkbox</type>
</CustomField>