unpackaged/main/default/objects/JSR__c/fields/OutOfScopeWorkCompleted2__c.field-meta.xml
<CustomField>
    <fullName>OutOfScopeWorkCompleted2__c</fullName>
    <label>Out Of Scope Work Completed</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>