unpackaged/main/default/objects/JSR__c/fields/OutOfScopeWorkCompleted__c.field-meta.xml
<CustomField>
    <fullName>OutOfScopeWorkCompleted__c</fullName>
    <label>Out Of Scope Work Completed</label>
    <type>TextArea</type>
</CustomField>