unpackaged/main/default/objects/JSR__c/fields/PanelsDoorsCoversClosed__c.field-meta.xml
<CustomField>
    <fullName>PanelsDoorsCoversClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panels Doors Covers Closed</label>
    <type>Checkbox</type>
</CustomField>