unpackaged/main/default/objects/JSR__c/fields/Part_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Serial_Number__c</fullName>
    <label>Part Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>