unpackaged/main/default/objects/JSR__c/fields/Parts_Being_Returned__c.field-meta.xml
<CustomField>
    <fullName>Parts_Being_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Being Returned?</label>
    <type>Checkbox</type>
</CustomField>