unpackaged/main/default/objects/JSR__c/fields/Parts_Installed_Serial_Files2__c.field-meta.xml
<CustomField>
    <fullName>Parts_Installed_Serial_Files2__c</fullName>
    <label>Parts Installed Serial Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>