unpackaged/main/default/objects/JSR__c/fields/Parts_Installed_Serial_Files__c.field-meta.xml
<CustomField>
    <fullName>Parts_Installed_Serial_Files__c</fullName>
    <label>Parts Installed Serial Files</label>
    <type>TextArea</type>
</CustomField>