unpackaged/main/default/objects/JSR__c/fields/Parts_Received__c.field-meta.xml
<CustomField>
    <fullName>Parts_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Received</label>
    <type>Checkbox</type>
</CustomField>