unpackaged/main/default/objects/JSR__c/fields/Parts_Return_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Parts_Return_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Return Shipped?</label>
    <type>Checkbox</type>
</CustomField>