unpackaged/main/default/objects/JSR__c/fields/Pass_or_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_or_Fail__c</fullName>
    <label>Pass or Fail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>