unpackaged/main/default/objects/JSR__c/fields/Patch_Panels_Files2__c.field-meta.xml
<CustomField>
    <fullName>Patch_Panels_Files2__c</fullName>
    <label>Patch Panels Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>