unpackaged/main/default/objects/JSR__c/fields/Patch_Panels_Files__c.field-meta.xml
<CustomField>
    <fullName>Patch_Panels_Files__c</fullName>
    <label>Patch Panels Files</label>
    <type>TextArea</type>
</CustomField>