unpackaged/main/default/objects/JSR__c/fields/Patch_Panels_Labeled__c.field-meta.xml
<CustomField>
    <fullName>Patch_Panels_Labeled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patch Panels Labeled</label>
    <type>Checkbox</type>
</CustomField>