unpackaged/main/default/objects/JSR__c/fields/PDF_Black_Box_Template_Processed__c.field-meta.xml
<CustomField>
    <fullName>PDF_Black_Box_Template_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Black Box Template Processed</label>
    <type>Checkbox</type>
</CustomField>