unpackaged/main/default/objects/JSR__c/fields/PDFBlackBoxTemplateFiles2__c.field-meta.xml
<CustomField>
    <fullName>PDFBlackBoxTemplateFiles2__c</fullName>
    <label>PDF Black Box Template Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>