unpackaged/main/default/objects/JSR__c/fields/PDFBlackBoxTemplateFiles__c.field-meta.xml
<CustomField>
    <fullName>PDFBlackBoxTemplateFiles__c</fullName>
    <label>PDF Black Box Template Files</label>
    <type>TextArea</type>
</CustomField>