unpackaged/main/default/objects/JSR__c/fields/PDUs_Cable_Labeling_Files2__c.field-meta.xml
<CustomField>
    <fullName>PDUs_Cable_Labeling_Files2__c</fullName>
    <label>PDUs Cable Labeling Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>