unpackaged/main/default/objects/JSR__c/fields/PDUs_Cable_Labeling_Files__c.field-meta.xml
<CustomField>
    <fullName>PDUs_Cable_Labeling_Files__c</fullName>
    <label>PDUs Cable Labeling Files</label>
    <type>TextArea</type>
</CustomField>