unpackaged/main/default/objects/JSR__c/fields/Photo_of_Cable_run__c.field-meta.xml
<CustomField>
    <fullName>Photo_of_Cable_run__c</fullName>
    <label>Photo of Cable run</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>