unpackaged/main/default/objects/JSR__c/fields/Photo_of_Femtocell_Installed__c.field-meta.xml
<CustomField>
    <fullName>Photo_of_Femtocell_Installed__c</fullName>
    <label>Photo of Femtocell Installed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>