unpackaged/main/default/objects/JSR__c/fields/Photo_of_Internet_Modem__c.field-meta.xml
<CustomField>
    <fullName>Photo_of_Internet_Modem__c</fullName>
    <label>Photo of Internet Modem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>