unpackaged/main/default/objects/JSR__c/fields/Planet_Switch_Files2__c.field-meta.xml
<CustomField>
    <fullName>Planet_Switch_Files2__c</fullName>
    <label>Planet Switch Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>