unpackaged/main/default/objects/JSR__c/fields/Planet_Switch_Files__c.field-meta.xml
<CustomField>
    <fullName>Planet_Switch_Files__c</fullName>
    <label>Planet Switch Files</label>
    <type>TextArea</type>
</CustomField>