unpackaged/main/default/objects/JSR__c/fields/PMRFormProvidedIsMostRecent__c.field-meta.xml
<CustomField>
    <fullName>PMRFormProvidedIsMostRecent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMR Form Provided Is Most Recent</label>
    <type>Checkbox</type>
</CustomField>