unpackaged/main/default/objects/JSR__c/fields/PMRScreenshotResultsFiles2__c.field-meta.xml
<CustomField>
    <fullName>PMRScreenshotResultsFiles2__c</fullName>
    <label>PMR Screenshot Results Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>