unpackaged/main/default/objects/JSR__c/fields/PMRScreenshotResultsFiles__c.field-meta.xml
<CustomField>
    <fullName>PMRScreenshotResultsFiles__c</fullName>
    <label>PMR Screenshot Results Files</label>
    <type>TextArea</type>
</CustomField>