unpackaged/main/default/objects/JSR__c/fields/Power_Cord_Plugged_Into__c.field-meta.xml
<CustomField>
    <fullName>Power_Cord_Plugged_Into__c</fullName>
    <label>Power Cord Plugged Into</label>
    <length>64</length>
    <type>Text</type>
</CustomField>