unpackaged/main/default/objects/JSR__c/fields/PowerCordPluggedIntoFiles2__c.field-meta.xml
<CustomField>
    <fullName>PowerCordPluggedIntoFiles2__c</fullName>
    <label>Power Cord Plugged Into Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>