unpackaged/main/default/objects/JSR__c/fields/PowerCordPluggedIntoFiles__c.field-meta.xml
<CustomField>
    <fullName>PowerCordPluggedIntoFiles__c</fullName>
    <label>Power Cord Plugged Into Files</label>
    <type>TextArea</type>
</CustomField>