unpackaged/main/default/objects/JSR__c/fields/Provide_Vendor_Name_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Provide_Vendor_Name_Company_Contact__c</fullName>
    <label>Provide Vendor Name Company Contact</label>
    <type>TextArea</type>
</CustomField>