unpackaged/main/default/objects/JSR__c/fields/Purpose_Of_Site_Survey2__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Site_Survey2__c</fullName>
    <label>Purpose Of Site Survey</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>