unpackaged/main/default/objects/JSR__c/fields/Purpose_Of_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Site_Survey__c</fullName>
    <label>Purpose Of Site Survey</label>
    <type>TextArea</type>
</CustomField>