unpackaged/main/default/objects/JSR__c/fields/Questions_Regarding_SOW__c.field-meta.xml
<CustomField>
    <fullName>Questions_Regarding_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questions Regarding SOW</label>
    <type>Checkbox</type>
</CustomField>