unpackaged/main/default/objects/JSR__c/fields/Real_Time_Updates_Provided__c.field-meta.xml
<CustomField>
    <fullName>Real_Time_Updates_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Time Updates Provided</label>
    <type>Checkbox</type>
</CustomField>