unpackaged/main/default/objects/JSR__c/fields/Receipt_Printers_Have_Ethernet_Ports__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Printers_Have_Ethernet_Ports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Printers Have Ethernet Ports</label>
    <type>Checkbox</type>
</CustomField>