unpackaged/main/default/objects/JSR__c/fields/ReceiptPrintersEthernetPortsFiles2__c.field-meta.xml
<CustomField>
    <fullName>ReceiptPrintersEthernetPortsFiles2__c</fullName>
    <label>Receipt Printers Ethernet Ports Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>