unpackaged/main/default/objects/JSR__c/fields/ReceiptPrintersEthernetPortsFiles__c.field-meta.xml
<CustomField>
    <fullName>ReceiptPrintersEthernetPortsFiles__c</fullName>
    <label>Receipt Printers Ethernet Ports Files</label>
    <type>TextArea</type>
</CustomField>