unpackaged/main/default/objects/JSR__c/fields/Received_Detailed_SOW2__c.field-meta.xml
<CustomField>
    <fullName>Received_Detailed_SOW2__c</fullName>
    <label>Received Detailed SOW Part1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>