unpackaged/main/default/objects/JSR__c/fields/Received_Detailed_SOW__c.field-meta.xml
<CustomField>
    <fullName>Received_Detailed_SOW__c</fullName>
    <label>Received Detailed SOW</label>
    <type>TextArea</type>
</CustomField>