unpackaged/main/default/objects/JSR__c/fields/ReceivedShippingContainer_Condition__c.field-meta.xml
<CustomField>
    <fullName>ReceivedShippingContainer_Condition__c</fullName>
    <label>Received Shipping Container Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>