unpackaged/main/default/objects/JSR__c/fields/Reviewed_SOW_And_Safety__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_SOW_And_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed SOW And Safety</label>
    <type>Checkbox</type>
</CustomField>