unpackaged/main/default/objects/JSR__c/fields/RITM_Number__c.field-meta.xml
<CustomField>
    <fullName>RITM_Number__c</fullName>
    <label>RITM Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>