unpackaged/main/default/objects/JSR__c/fields/RMA_Router_Files2__c.field-meta.xml
<CustomField>
    <fullName>RMA_Router_Files2__c</fullName>
    <label>RMA Router Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>