unpackaged/main/default/objects/JSR__c/fields/RMA_Router_Files__c.field-meta.xml
<CustomField>
    <fullName>RMA_Router_Files__c</fullName>
    <label>RMA Router Files</label>
    <type>TextArea</type>
</CustomField>