unpackaged/main/default/objects/JSR__c/fields/RMA_Serial_Files__c.field-meta.xml
<CustomField>
    <fullName>RMA_Serial_Files__c</fullName>
    <label>RMA Serial Files</label>
    <type>TextArea</type>
</CustomField>