unpackaged/main/default/objects/JSR__c/fields/rmaPartsToBeReturned__c.field-meta.xml
<CustomField>
    <fullName>rmaPartsToBeReturned__c</fullName>
    <label>Parts To Be Returned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>