unpackaged/main/default/objects/JSR__c/fields/Rogers_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Rogers_Order_Number__c</fullName>
    <label>Rogers Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>