unpackaged/main/default/objects/JSR__c/fields/RSRP_VAlue__c.field-meta.xml
<CustomField>
    <fullName>RSRP_VAlue__c</fullName>
    <label>RSRP VAlue</label>
    <length>16</length>
    <type>Text</type>
</CustomField>