unpackaged/main/default/objects/JSR__c/fields/SA_Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Identity_Number__c</fullName>
    <label>SA Identity Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>