unpackaged/main/default/objects/JSR__c/fields/ScopeOfWorkCompletedInFull__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfWorkCompletedInFull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Of Work Completed In Full</label>
    <type>Checkbox</type>
</CustomField>