unpackaged/main/default/objects/JSR__c/fields/ScreenshotSurveyFormsFiles2__c.field-meta.xml
<CustomField>
    <fullName>ScreenshotSurveyFormsFiles2__c</fullName>
    <label>Screenshot Survey Forms Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>