unpackaged/main/default/objects/JSR__c/fields/ScreenshotSurveyFormsFiles__c.field-meta.xml
<CustomField>
    <fullName>ScreenshotSurveyFormsFiles__c</fullName>
    <label>Screenshot Survey Forms Files</label>
    <type>TextArea</type>
</CustomField>