unpackaged/main/default/objects/JSR__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>JSRs</relationshipLabel>
    <relationshipName>JSRs</relationshipName>
    <type>Lookup</type>
</CustomField>