unpackaged/main/default/objects/JSR__c/fields/Shaw_Network_Files2__c.field-meta.xml
<CustomField>
    <fullName>Shaw_Network_Files2__c</fullName>
    <label>Shaw Network Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>