unpackaged/main/default/objects/JSR__c/fields/Shaw_Network_Files__c.field-meta.xml
<CustomField>
    <fullName>Shaw_Network_Files__c</fullName>
    <label>Shaw Network Files</label>
    <type>TextArea</type>
</CustomField>