unpackaged/main/default/objects/JSR__c/fields/Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>Signal_Strength__c</fullName>
    <label>Signal Strength</label>
    <length>16</length>
    <type>Text</type>
</CustomField>