unpackaged/main/default/objects/JSR__c/fields/SIM_1__c.field-meta.xml
<CustomField>
    <fullName>SIM_1__c</fullName>
    <label>SIM 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>