unpackaged/main/default/objects/JSR__c/fields/SINR_Value__c.field-meta.xml
<CustomField>
    <fullName>SINR_Value__c</fullName>
    <label>SINR Value</label>
    <length>16</length>
    <type>Text</type>
</CustomField>