unpackaged/main/default/objects/JSR__c/fields/Site_Left_Clean__c.field-meta.xml
<CustomField>
    <fullName>Site_Left_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Left Clean Free Of Trash</label>
    <type>Checkbox</type>
</CustomField>