unpackaged/main/default/objects/JSR__c/fields/SOW_Completed_As_Stated__c.field-meta.xml
<CustomField>
    <fullName>SOW_Completed_As_Stated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Completed As Stated</label>
    <type>Checkbox</type>
</CustomField>