unpackaged/main/default/objects/JSR__c/fields/SOW_Detailed_Enough__c.field-meta.xml
<CustomField>
    <fullName>SOW_Detailed_Enough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Detailed Enough</label>
    <type>Checkbox</type>
</CustomField>