unpackaged/main/default/objects/JSR__c/fields/Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Status_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This initiates the email autogeneration of JSR pdf.</description>
    <label>Status Check</label>
    <type>Checkbox</type>
</CustomField>