unpackaged/main/default/objects/JSR__c/fields/SurveyFormUsedMostUpToDate__c.field-meta.xml
<CustomField>
    <fullName>SurveyFormUsedMostUpToDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Form Used Most Up To Date</label>
    <type>Checkbox</type>
</CustomField>