unpackaged/main/default/objects/JSR__c/fields/Technician2__c.field-meta.xml
<CustomField>
    <fullName>Technician2__c</fullName>
    <label>Technician</label>
    <length>80</length>
    <type>Text</type>
</CustomField>