unpackaged/main/default/objects/JSR__c/fields/Test_Internet_And_Speed__c.field-meta.xml
<CustomField>
    <fullName>Test_Internet_And_Speed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Internet And Speed</label>
    <type>Checkbox</type>
</CustomField>