unpackaged/main/default/objects/JSR__c/fields/Test_Internet_Files2__c.field-meta.xml
<CustomField>
    <fullName>Test_Internet_Files2__c</fullName>
    <label>Test Internet Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>