unpackaged/main/default/objects/JSR__c/fields/Test_Internet_Files__c.field-meta.xml
<CustomField>
    <fullName>Test_Internet_Files__c</fullName>
    <label>Test Internet Files</label>
    <type>TextArea</type>
</CustomField>