unpackaged/main/default/objects/JSR__c/fields/Test_LTE_Backup__c.field-meta.xml
<CustomField>
    <fullName>Test_LTE_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test LTE Backup</label>
    <type>Checkbox</type>
</CustomField>