unpackaged/main/default/objects/JSR__c/fields/TTBF_Before_Files__c.field-meta.xml
<CustomField>
    <fullName>TTBF_Before_Files__c</fullName>
    <label>TTBF Before Files</label>
    <type>TextArea</type>
</CustomField>