unpackaged/main/default/objects/JSR__c/fields/TTBF_Post_Files2__c.field-meta.xml
<CustomField>
    <fullName>TTBF_Post_Files2__c</fullName>
    <label>TTBF Post Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>