unpackaged/main/default/objects/JSR__c/fields/TTBF_Post_Files__c.field-meta.xml
<CustomField>
    <fullName>TTBF_Post_Files__c</fullName>
    <label>TTBF Post Files</label>
    <type>TextArea</type>
</CustomField>