unpackaged/main/default/objects/JSR__c/fields/UpdatedViasatSharepoint__c.field-meta.xml
<CustomField>
    <fullName>UpdatedViasatSharepoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated In Viasat Sharepoint</label>
    <type>Checkbox</type>
</CustomField>