unpackaged/main/default/objects/JSR__c/fields/Viasat_Return_Equipment_Files2__c.field-meta.xml
<CustomField>
    <fullName>Viasat_Return_Equipment_Files2__c</fullName>
    <label>Viasat Return Equipment Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>