unpackaged/main/default/objects/JSR__c/fields/Viasat_Return_Equipment_Files__c.field-meta.xml
<CustomField>
    <fullName>Viasat_Return_Equipment_Files__c</fullName>
    <label>Viasat Return Equipment Files</label>
    <type>TextArea</type>
</CustomField>