unpackaged/main/default/objects/JSR__c/fields/WaveguidePorts__c.field-meta.xml
<CustomField>
    <fullName>WaveguidePorts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waveguide Ports BDC BUC LNA LNBDC HPA</label>
    <type>Checkbox</type>
</CustomField>