unpackaged/main/default/objects/JSR__c/fields/Were_ESD_Followed__c.field-meta.xml
<CustomField>
    <fullName>Were_ESD_Followed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were ESD Followed</label>
    <type>Checkbox</type>
</CustomField>