unpackaged/main/default/objects/JSR__c/fields/What_Issues_For_Follow_Up2__c.field-meta.xml
<CustomField>
    <fullName>What_Issues_For_Follow_Up2__c</fullName>
    <label>What Issues For Follow Up</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>