unpackaged/main/default/objects/JSR__c/fields/What_Issues_For_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>What_Issues_For_Follow_Up__c</fullName>
    <label>What Issues For Follow Up</label>
    <type>TextArea</type>
</CustomField>