unpackaged/main/default/objects/JSR__c/fields/WhomSendPMRResultsTo2__c.field-meta.xml
<CustomField>
    <fullName>WhomSendPMRResultsTo2__c</fullName>
    <label>Whom Send PMR Results To?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>