unpackaged/main/default/objects/JSR__c/fields/WhomSendPMRResultsTo__c.field-meta.xml
<CustomField>
    <fullName>WhomSendPMRResultsTo__c</fullName>
    <label>Whom Send PMR Results To?</label>
    <type>TextArea</type>
</CustomField>