unpackaged/main/default/objects/JSR__c/fields/WhomSendSurveyResultsTo2__c.field-meta.xml
<CustomField>
    <fullName>WhomSendSurveyResultsTo2__c</fullName>
    <label>Whom Send Survey Results To?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>