unpackaged/main/default/objects/JSR__c/fields/WhomSendSurveyResultsTo__c.field-meta.xml
<CustomField>
    <fullName>WhomSendSurveyResultsTo__c</fullName>
    <label>Whom Send Survey Results To?</label>
    <type>TextArea</type>
</CustomField>