unpackaged/main/default/objects/JSR__c/fields/Why_Echo_Policy_Not_Used2__c.field-meta.xml
<CustomField>
    <fullName>Why_Echo_Policy_Not_Used2__c</fullName>
    <label>Why Echo Policy Not Used</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>