unpackaged/main/default/objects/JSR__c/fields/Why_Echo_Policy_Not_Used__c.field-meta.xml
<CustomField>
    <fullName>Why_Echo_Policy_Not_Used__c</fullName>
    <label>Why Echo Policy Not Used</label>
    <type>TextArea</type>
</CustomField>