unpackaged/main/default/objects/JSR__c/fields/Why_Parts_Not_Returned2__c.field-meta.xml
<CustomField>
    <fullName>Why_Parts_Not_Returned2__c</fullName>
    <label>Why Parts Not Returned</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>