unpackaged/main/default/objects/JSR__c/fields/WhyInfoNotLTSQuality2__c.field-meta.xml
<CustomField>
    <fullName>WhyInfoNotLTSQuality2__c</fullName>
    <label>Why Information Not LTS Quality</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>