unpackaged/main/default/objects/JSR__c/fields/WhyInfoNotLTSQuality__c.field-meta.xml
<CustomField>
    <fullName>WhyInfoNotLTSQuality__c</fullName>
    <label>Why Information Not LTS Quality</label>
    <type>TextArea</type>
</CustomField>