unpackaged/main/default/objects/JSR__c/fields/WhyPartsNotReturned__c.field-meta.xml
<CustomField>
    <fullName>WhyPartsNotReturned__c</fullName>
    <label>Why Parts Not Returned</label>
    <type>TextArea</type>
</CustomField>