unpackaged/main/default/objects/JSR__c/fields/WhyUnableToEngagePMO2__c.field-meta.xml
<CustomField>
    <fullName>WhyUnableToEngagePMO2__c</fullName>
    <label>Why Unable To Engage PMO</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>