unpackaged/main/default/objects/JSR__c/fields/WhyUnableToEngagePMO__c.field-meta.xml
<CustomField>
    <fullName>WhyUnableToEngagePMO__c</fullName>
    <label>Why Unable To Engage PMO</label>
    <type>TextArea</type>
</CustomField>