unpackaged/main/default/objects/JSR__c/fields/Wires_Concealed_Files2__c.field-meta.xml
<CustomField>
    <fullName>Wires_Concealed_Files2__c</fullName>
    <label>Wires Concealed Files</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>