unpackaged/main/default/objects/JSR__c/fields/Wires_Concealed_Files__c.field-meta.xml
<CustomField>
    <fullName>Wires_Concealed_Files__c</fullName>
    <label>Wires Concealed Files</label>
    <type>TextArea</type>
</CustomField>