unpackaged/main/default/objects/JSR__c/fields/Work_Completed_and_Remaining2__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_and_Remaining2__c</fullName>
    <label>Work Completed and Remaining</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>