unpackaged/main/default/objects/JSR__c/fields/Work_Completed_and_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_and_Remaining__c</fullName>
    <label>Work Completed and Remaining</label>
    <type>TextArea</type>
</CustomField>