unpackaged/main/default/objects/JSR__c/fields/X48_Port_Meraki_Switch_Installed__c.field-meta.xml
<CustomField>
    <fullName>X48_Port_Meraki_Switch_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>48 Port Meraki Switch Installed</label>
    <type>Checkbox</type>
</CustomField>