unpackaged/main/default/objects/JSR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>SA_Identity_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Client__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Electronic_Agreement__c</columns>
    <columns>Date_Completion__c</columns>
    <columns>Technician__c</columns>
    <columns>Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Admin</role>
        <role>Area_Manager_Read_Only</role>
        <role>Dispatch_Manager</role>
        <role>Dispatch_Team_Leads_Project_Coordinators</role>
        <role>Dispatcher</role>
        <role>Technicians_with_Dispatcher_Access</role>
    </sharedTo>
</ListView>