unpackaged/main/default/objects/JSR__c/listViews/My_JSRs.listView-meta.xml
<ListView>
    <fullName>My_JSRs</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>SA_Identity_Number__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Technician__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My JSRs</label>
    <sharedTo>
        <group>Technician_Search_Views</group>
    </sharedTo>
</ListView>